--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # Database configurations
-DATABASE_URL=postgres://username:password@host:port/database
+DEV_DATABASE_URL=postgres://username:password@host:port/database
+TEST_DATABASE_URL=postgres://username:password@host:port/database
+PROD_DATABASE_URL=
 
 # Application Port for local development - express server listens on this port
 PORT=3000
