--- a/package.json
+++ b/package.json
@@ -13,26 +13,35 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
+    "@types/faker": "^5.1.2",
+    "@types/jest": "^26.0.14",
     "@types/morgan": "^1.9.1",
     "@types/node": "^8.0.29",
+    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "faker": "^5.1.0",
     "husky": "^4.3.0",
+    "jest": "^26.4.2",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
+    "supertest": "^5.0.0",
+    "ts-jest": "^26.4.1",
     "typescript": "^3.9.7"
   },
   "scripts": {
     "build": "tsc",
-    "serve": "node dist/app.js",
+    "serve": "node dist/server.js",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src",
     "check": "npm run typecheck && npm run lint",
     "fix": "run run tc && eslint src --fix",
-    "dev": "nodemon --watch src --ext ts --exec \"tsc --incremental && npm run serve\""
+    "dev": "nodemon --watch src --ext ts --exec \"tsc --incremental && npm run serve\"",
+    "watch-test": "jest --watch",
+    "test": "jest"
   },
   "husky": {
     "hooks": {
