--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,6 @@ env:
 
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
-# after_success: npm run coverage
+
+after_success:
+  - npm run coverage
