--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
+    "coveralls": "^3.1.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
@@ -41,7 +42,8 @@
     "fix": "run run tc && eslint src --fix",
     "dev": "nodemon --watch src --ext ts --exec \"tsc --incremental && npm run serve\"",
     "watch-test": "jest --watch",
-    "test": "jest"
+    "test": "jest --coverage",
+    "coverage": "coveralls < coverage/lcov.info"
   },
   "husky": {
     "hooks": {
