Enable deploying to AWS Lambda using serverless-http

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "morgan": "^1.10.0",
     "pg": "^8.0.3",
     "reflect-metadata": "^0.1.10",
+    "serverless-http": "^2.6.0",
     "typeorm": "^0.2.28"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
   },
   "scripts": {
     "build": "tsc",
+    "clean": "rm -rf dist",
     "serve": "node dist/server.js",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src",
@@ -43,7 +45,8 @@
     "dev": "nodemon --watch src --ext ts --exec \"tsc --incremental && npm run serve\"",
     "watch-test": "jest --watch",
     "test": "jest --coverage",
-    "coverage": "coveralls < coverage/lcov.info"
+    "coverage": "coveralls < coverage/lcov.info",
+    "deploy": "npm run clean && npm run build && sls deploy"
   },
   "husky": {
     "hooks": {
