--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,10 @@ before_script:
 
 after_success:
   - npm run coverage
+
+deploy:
+  provider: script
+  script: npm run deploy
+  skip_cleanup: true
+  on:
+    branch: main
