--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "CS3219 OTOT Task B",
   "dependencies": {
     "body-parser": "^1.18.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.15.4",
     "morgan": "^1.10.0",
@@ -13,6 +14,7 @@
     "typeorm": "^0.2.28"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "@types/faker": "^5.1.2",
     "@types/jest": "^26.0.14",
